Visual fixes
Make headings easier to read by improving contrast (make them darker).

Fix jumping content between navigation, if one of pages doesn't have scrollbar. Issue video: http://take.ms/mjy69

Remove double scrolling for demo page. There are still second scrollbar, but it doesn't scroll page now.

--- a/src/layouts/DemoPage/index.css
+++ b/src/layouts/DemoPage/index.css
@@ -1,3 +1,4 @@
 .demoPage {
   height: 100vh;
+  height: calc(100vh - 64px - 80px); /* Remove header and footer height */
 }
